<resources>
    <string name="app_name">Jukebox 2.0</string>
    <string name="texte_bouton_diffuseur">Diffuseur</string>
    <string name="texte_bouton_participant">Participant</string>
    <string name="title_activity_accueil_diffuseur">AccueilDiffuseur</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!-- Menu -->
    <string name="menu_option_reglages">Réglages</string>
    <string name="menu_option_mon_compte">Mon Compte</string>

    <!-- Page d'accueil -->
    <string name="texte_bouton_mode_connecte">Mode connecté:\nPartagez les musiques que vous aimez en les envoyant au Diffuseur (nécessite une connexion internet)</string>
    <string name="texte_bouton_mode_non_connecte">Mode non connecté:\nVotez pour les musiques que vous aimez en vous connectant en Wi-Fi Direct au Diffuseur</string>

    <!-- Page Google Sign In -->
    <string name="texte_connexion_google">Connectez-vous avec Google</string>

    <string name="title_activity_accueil_participant">Accueil Participant</string>

    <!-- Options des utilisateur -->
    <string name="option_1_accueil">Accueil</string>
    <string name="option_2_artistes">Artistes</string>
    <string name="option_2_bibliotheque">Ma musique</string>
    <string name="option_3_albums">Albums</string>
    <string name="option_4_chansons">Chansons</string>
    <string name="option_5_mes_listes_de_lecture">Partager liste de lecture</string>
    <string name="option_5_rechercher_evenement">Rechercher un évenement</string>
    <string name="option_5_evenements">Partager Evenement</string>
    <string name="option_6_diffuser_playlist">Diffuser liste de lecture</string>
    <string name="option_6_rejoindre_playlist">Rejoindre liste de lecture</string>
    <string name="option_7_changer_de_mode">Changer de mode</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texte_fragment_Accueil">Fragment Accueil</string>
    <string name="texte_fragment_artistes">Aucun artiste disponible</string>
    <string name="texte_fragment_albums">Aucun album disponible</string>
    <string name="texte_fragment_chansons">Aucune chanson disponible</string>
    <string name="texte_fragment_liste_de_lecture">Aucune liste de lecture disponible</string>
    <string name="title_activity_mode_diffuseur">Mode Diffuseur</string>
    <string name="title_activity_mode_diffuseurCo">Mode Diffuseur Connecté</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_mode_participant">Mode Participant</string>
    <string name="title_activity_mode_participantCo">Mode Participant Connecté</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tab_diffuseur">TabDiffuseurActivity</string>
    <string name="title_activity_activity_diffusion">ActivityDiffusion</string>
    <string name="title_activity_activity_rejoindre">ActivityRejoindre</string>

    <!-- Menu contextuel création de liste de lecture -->
    <string name="texte_ajout_nouvelle_playlist">Ajouter à une Liste de Lecture</string>
    <string name="texte_ajout_nouvel_evenement">Proposer pour un évenement</string>
    <string name="texte_creation_liste_lecture">Créer une Nouvelle PlayList</string>
    <string name="texte_aller_a_page_artiste">Aller à la page Artiste</string>
    <string name="texte_aller_a_page_album">Aller à la page Album</string>
    <string name="texte_supprimer_musique">Supprimer de la liste</string>
    <string name="texte_ajout_nouvelle_musique">Ajouter une Musique</string>
    <string name="title_activity_test">Test</string>

    <!-- Strings pour la connexion à notre application avec Google Sign In -->
    <string name="title_text">Google Sign-In\nQuickstart</string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>

    <!-- String Naveck -->

    <string name="titre_boite_de_dialogue">Internet Indisponible</string>
    <!--String Boîte de dialogue-->
    <string name="message_boite_de_dialogue">Aucune connexion réseau n\'est disponible. Veuillez réessayez ultérieurement</string>
    <string name="message_boite_de_dialogue_retour_deconnexion">Attention vous allez être deconnecté</string>

    <!-- Mode Connecté -->

    <!-- Activité créer événement -->

    <string name="titre_alert_dialog_creation_evenement">Création d\'un nouvel événement</string>

    <string name="label_nom_evenement"><font size="15">Nom événement: </font></string>
    <string name="label_date">Date: </string>
    <string name="label_mot_de_passe">Mot de passe: </string>

    <string name="hint_nom_evenement"><font size="15">Entrer un nom d\'événement</font></string>
    <string name="hint_date"><font size="15">jj-mm-aaaa</font></string>
    <string name="hint_mot_de_passe"><font size="15">Entrer un mot de passe</font></string>

</resources>
