<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="masterigis.com.jukebox2_0.ModeConnecte.FragmentsCo.Creation_evenement">



    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

        <TextView
            android:layout_width="0dip"
            android:layout_weight=".3"
            android:layout_height="wrap_content"
            android:text="@string/label_nom_evenement"/>

        <EditText
            android:id="@+id/titre"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:hint="@string/hint_nom_evenement"
            android:singleLine="true"
            android:imeOptions="actionDone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dip"
            android:layout_weight=".3"
            android:layout_height="wrap_content"
            android:text="@string/label_date" />

        <EditText
            android:id="@+id/date"
            android:inputType="date"
            android:layout_width="0dip"
            android:layout_weight=".7"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/hint_date"
            android:imeOptions="actionDone"/>
    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal">

        <TextView
            android:layout_width="0dip"
            android:layout_weight=".3"
            android:layout_height="wrap_content"
            android:text="@string/label_mot_de_passe" />


        <EditText
            android:id="@+id/mdp"
            android:inputType="textPassword"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight=".7"
            android:hint="@string/hint_mot_de_passe"
            android:singleLine="true"
            android:imeOptions="actionDone"/>

    </LinearLayout>



</LinearLayout>
